--- a/css/styles.css
+++ b/css/styles.css
@@ -17,18 +17,18 @@ header { width: 100%; height: 60px; background: #00A9D8; padding: 5px 0; margin-
 	.button a { color: #7ED5EA; text-decoration: none; }
 	.button:hover { background: linear-gradient(#0f2557, #28559A); }
 
-section.hero { width: 100%; height: 400px; background: url(bgplaceholder.jpg); background-size: 100% 100%; padding: 5px 0; margin-bottom: 5px; }
-	.heroimage { width: 480px; height: 380px; background: #0F2557; float: left; margin: 10px 0 0 20px; }
-	.herocontent { width: 400px; float: left; margin-left: 20px; padding-top: 40px; }
-	section.hero h1 { font-size: 30px; margin-bottom: -10px; }
-	section.hero p { margin-bottom: 60px; }
-	section.hero .button { width: 225px; height: 40px; padding-top: 25px; font-size: 20px; }
+section.art { width: 100%; height: 400px; background: url(bgplaceholder.jpg); background-size: 100% 100%; padding: 5px 0; margin-bottom: 5px; }
+	.artimage { width: 480px; height: 380px; background: #0F2557; float: left; margin: 10px 0 0 20px; }
+	.artcontent { width: 400px; float: left; margin-left: 20px; padding-top: 40px; }
+	section.art h1 { font-size: 30px; margin-bottom: -10px; }
+	section.art p { margin-bottom: 60px; }
+	section.art .button { width: 225px; height: 40px; padding-top: 25px; font-size: 20px; }
 
-section.features { width: 940px; height: 350px; background: #7ED5EA; margin: 0 auto 5px; padding: 5px 0; }
-	section.features h2 { font-size: 25px; text-align: center; margin-bottom: -20px; }
-	section.features h4 { font-weight: normal; text-align: center; margin-bottom: 60px; }
-	section.features aside { width: 286px; height: 200px; float: left; text-align: center; margin-left: 20px; }
-	section.features aside img { width: 100%; height: 150px; background: rgb(200,200,200); }
+section.features { width: 940px; height: 450px; background: #7ED5EA; margin: 0 auto 5px; padding: 5px 0; }
+	section.features h2 { font-size: 25px; text-align: center; margin-bottom: 20px; }
+	section.features h4 { font-weight: normal; text-align: center; margin-bottom: 30px; }
+	section.features aside { width: 280px; height: 200px; float: left; text-align: center; margin-left: 20px; }
+	section.features aside img { width: 100%; height: 300px; background: rgb(200,200,200); }
 
 section.organize { width: 100%; height: 260px; background: rgb(220,220,220); padding: 5px 0; margin-bottom: 5px; }
 	section.organize img, section.share img { width: 440px; height: 225px; float: left; margin-left: 20px; margin-top: 20px; background: rgb(200,200,200); }
@@ -36,10 +36,10 @@ section.organize { width: 100%; height: 260px; background: rgb(220,220,220); pad
 
 section.share { width: 940px; height: 260px; background:  #7ED5EA; margin: 0 auto 5px; padding: 5px 0; }
 
-section.get { width: 100%; height: 100px; background:  #00A9D8; padding: 5px 0; margin-bottom: 5px; }
-	section.get h2 { font-size: 30px; float: left; color: #ffffff; margin-left: 60px; margin-top: 30px; }	
-	section.get .button { margin-right: 60px; margin-top: 25px; color: #7ED5EA }
+section.get { width: 100%; height: 60px; background:  #00A9D8; padding: 5px 0; margin-bottom: 5px; }
+	section.get h2 { font-size: 30px; float: left; color: #ffffff; margin-left: 60px; margin-top: 10px; }	
+	section.get .button { margin-right: 40px; margin-top: 10px; color: #7ED5EA }
 
-footer { width: 100%; height: 60px; background: #7ED5EA; padding: 5px 0; text-align: center; }
+footer { width: 100%; height: 50px; background: #7ED5EA; padding: 5px 0; text-align: center; }
 
 .container { width: 940px; height: 100%; margin: 0 auto; }
